--- a/elisp/yasnippet/snippets/php-mode/<?php.org
+++ b/elisp/yasnippet/snippets/php-mode/<?php.org
@@ -20,7 +20,18 @@
  * @author  $3 <$4>
  * @copyright Copyright (c) $5 $6
  */
-class ${8:Hoge}
+class ${8:`(replace-regexp-in-string
+ "^_+" ""
+ (mapconcat
+  #'identity
+  (split-string
+   ((lambda (a)
+      (substring a (let ((case-fold-search nil))
+                     (string-match "\\\\(/[A-Z][a-zA-Z0-9]+\\\\)+$" a )
+                     ))
+      )
+    (file-name-sans-extension (buffer-file-name))
+    ) "/") "_"))`}
 {
     public function ${9:__construct}()
     {
